2010-02-22  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java: Centralized
	and increased timeouts to give slow-loading applets enough time to load.

2010-02-19 Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(FIND_RHINO_JAR): Clear RHINO_JAR variable
	if it still contains "no" at the end of the
	macro.

2010-05-26 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Update HotSpot changeset and SHA256 sum to
	obtain DIST_ID and DERIVATIVE_ID support.
	(bootstrap-directory-stage1.stamp): Always create
	the boot tools.jar as a symlink to rt.jar to
	appease the HotSpot build.  Join dependent parts
	using &&.
	(rewriter.stamp): Use IT_JAVACFLAGS and explicitly
	create destination directory as javac doesn't while
	ecj does.
	(rewrite-rhino.stamp): Join dependent parts with &&.
	(clean-tools-jar): Remove boot tools.jar symlink.

2010-02-17 Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/179
	* ChangeLog: Remove rogue whitespace highlighted
	by emacs.
	* Makefile.am:
	(REWRITER_SRCS): Sources for class file rewriter.
	Only set RHINO_JAR when WITH_RHINO is set.  Point
	to rewritten JAR file in build directory.  Add
	rewriter and license to EXTRA_DIST.  Make icedtea,
	icedtea-debug and icedtea-boot depend on rewrite-rhino.stamp.
	(stamps/rewriter.stamp): Build the class file rewriter.
	(stamps/rewrite-rhino.stamp): Rewrite the system Rhino JAR
	file to use the sun.org.mozilla namespace to avoid conflicts.
	(rewriter): New alias for stamps/rewriter.stamp.
	(rewrite-rhino): Likewise for stamps/rewrite-rhino.stamp.
	* patches/icedtea-rhino.patch:
	Copy rather than symlink the JAR file.  Only drop the
	internal suffix on the javascript package names.
	* rewriter/com/redhat/rewriter/ClassRewriter.java:
	(executor): Use a single threaded executor when
	debugging is enabled.
	(tasks): Store the Futures returned by the executor
	for later checking.
	(main(String[])): Log what happens when processFile